Refactoring. coinstrategy package is renamed as coinselection and moved to top level